# lpd-pscusolo

./: .gitattributes  README.md  setup.cfg
.github/workflows/: release_static.yml
control/: setup.cfg
control/src/pscusolo/: controller.py  gpio_fan_speed.py  pscusolo.py
control/test/config/: test_pscusolo.cfg
control/test/static/: index.html
deploy/: deploy.sh
deploy/ansible/: deploy_pscu.yml  hosts
deploy/ansible/group_vars/: pscu_bbb.yml
deploy/ansible/templates/: odin-hxtleak.service.j2  odin-pscusolo.service.j2  pscusolo.cfg.j2
src/pscusolo/: _version.py  adapter.py  controller.py  pscusolo.py
test/static/: index.html
test/static/js/: pscusolo.js
