[metadata]
name = pscusolo
author = Tim Nicholls
author_email = tim.nicholls@stfc.ac.uk

[options]
package_dir=
    =src
packages=find:
install_requires =
    odin-control @ git+https://github.com/odin-detector/odin-control@1.4.0#egg=odin-control
    odin-devices @ git+https://github.com/stfc-aeg/odin-devices@1.1.0#egg=odin-devices
    smbus2
    Adafruit_BBIO

[options.packages.find]
where=src

[options.extras_require]
test =
    pytest
    pytest-cov
    tox
    flake8
    flake8-docstrings
    isort
    mypy

[versioneer]
VCS = git
style = pep440
versionfile_source = src/pscusolo/_version.py
versionfile_build = pscusolo/_version.py
tag_prefix=

[flake8]
max-line-length = 100
extend-ignore = E203, W503

[mypy]
ignore_missing_imports = True


